--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -85,6 +85,7 @@ input.cmb2-upload-button.button {
 @media (min-width: 992px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     display: inline-block;
+    vertical-align: top;
   }
   .col-md-12 {
     width: 100%;
