--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -6,7 +6,15 @@
   display: none;
 }
 
-
+.pgsa-apply-redirect {
+    border: 1px dashed #BBB;
+    padding: 0.25rem 0.5rem;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #EEE;
+    margin: 0.25rem 0;
+    font-family: Courier New, monospace;
+}
 
 
 /***************** Backend Layout *******************/
