--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -47,12 +47,12 @@ input.cmb2-upload-button.button {
   text-indent: 0 !important;
 }
 a.cmb2-remove-file-button:before {
-    content: "\f158";
+    content: "\f335";
     font-family: dashicons;
     position: absolute;
-    color: #D50000;
+    color: #FFF;
     font-size: 20px;
-    background-color: #FFF;
+    background-color: #C50000;
     height: 20px;
     width: 20px;
     line-height: 1;
